# ComfyUI-TRELLIS2-HiCache

./: .comfyignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  trellis_hicache_patch.py
.github/workflows/: publish_node.yml
tests/: test_patch.py  validate_gpu.py
