# Packaging metadata for the registry.comfy.org Comfy Registry.
# Field layout follows https://docs.comfy.org/registry/specifications

[project]
name = "comfyui-trellis2-hicache"
description = "Training-free TRELLIS.2 image-to-3D acceleration: forecast the flow-matching velocity on skipped DiT steps (HiCache Hermite / HiCache++ DMD, via hicache-pp) across the sparse-structure and shape-SLaT stages (texture optional). ~2x faster, near-lossless. Pairs with visualbruno/ComfyUI-Trellis2."
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["hicache-pp>=1.1.0"]
classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
Repository = "https://github.com/Archerkattri/ComfyUI-TRELLIS2-HiCache"
BugTracker = "https://github.com/Archerkattri/ComfyUI-TRELLIS2-HiCache/issues"

[tool.comfy]
PublisherId = "archerkattri"
DisplayName = "ComfyUI-TRELLIS2-HiCache"
Icon = ""

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
